# BoltzmannMFX

./: .buildinfo  .gitmodules  CMakeLists.txt  DISCLAIMER  LICENSE  README.md  SUBMODULE.md  genindex.html  index.html  objects.inv  search.html  searchindex.js  style.html
exec/: CMakeLists.txt  GNUmakefile  Make.bmx  amrvis.defaults  input_abc  input_nlev  inputs
exec/abc_real_test/: input_real
exec/abc_test/: input_abc
exec/bacteria_fungi/: CMakeLists.txt  input_bf
exec/fungi/: CMakeLists.txt  input_fungi
exec/fungi/chk10000/: Header  job_info
exec/fungi/chk10000/Level_0/: X_k_D_00000  X_k_D_00001  X_k_D_00002  X_k_D_00003  X_k_D_00004  X_k_D_00005  X_k_D_00006  X_k_D_00007  X_k_D_00008  X_k_D_00009  X_k_D_00010  X_k_D_00011  X_k_D_00012  X_k_D_00013  X_k_D_00014  X_k_D_00015  X_k_H  volfrac_D_00003  volfrac_D_00006  volfrac_D_00007  volfrac_D_00010  volfrac_D_00013  volfrac_D_00014  volfrac_D_00015  volfrac_H
exec/fungi/chk10000/Level_1/: X_k_D_00000  X_k_D_00001  X_k_D_00002  X_k_D_00003  X_k_D_00004  X_k_D_00005  X_k_D_00006  X_k_D_00007  X_k_D_00008  X_k_D_00009  X_k_D_00010  X_k_D_00011  X_k_D_00012  X_k_D_00013  X_k_D_00014  X_k_D_00015  X_k_H  volfrac_D_00001  volfrac_D_00003  volfrac_D_00004  volfrac_D_00006  volfrac_D_00007  volfrac_D_00009  volfrac_D_00011  volfrac_D_00012  volfrac_D_00014  volfrac_D_00015  volfrac_H
exec/fungi/chk10000/Level_2/: X_k_D_00000  X_k_D_00001  X_k_D_00002  X_k_D_00003  X_k_D_00004  X_k_D_00005  X_k_D_00006  X_k_D_00007  X_k_D_00008  X_k_D_00009  X_k_D_00010  X_k_D_00011  X_k_D_00012  X_k_D_00013  X_k_D_00014  X_k_D_00015  X_k_H  volfrac_D_00000  volfrac_D_00001  volfrac_D_00003  volfrac_D_00006  volfrac_D_00009  volfrac_D_00012  volfrac_H
exec/fungi/chk10000/particles/: Header
exec/fungi/chk200000/: Header  job_info
exec/fungi/chk200000/Level_0/: X_k_D_00000  X_k_D_00001  X_k_D_00002  X_k_D_00003  X_k_D_00004  X_k_D_00005  X_k_D_00006  X_k_D_00007  X_k_D_00008  X_k_D_00009  X_k_D_00010  X_k_D_00011  X_k_D_00012  X_k_D_00013  X_k_D_00014  X_k_D_00015  X_k_H  volfrac_D_00003  volfrac_D_00007  volfrac_D_00009  volfrac_D_00010  volfrac_D_00011  volfrac_D_00014  volfrac_H
exec/fungi/chk200000/Level_1/: X_k_D_00000  X_k_D_00001  X_k_D_00002  X_k_D_00003  X_k_D_00004  X_k_D_00005  X_k_D_00006  X_k_D_00007  X_k_D_00008  X_k_D_00009  X_k_D_00010  X_k_D_00011  X_k_D_00012  X_k_D_00013  X_k_D_00014  X_k_D_00015  X_k_H  volfrac_D_00000  volfrac_D_00001  volfrac_D_00003  volfrac_D_00004  volfrac_D_00006  volfrac_D_00009  volfrac_D_00010  volfrac_D_00011  volfrac_D_00012  volfrac_D_00013  volfrac_D_00014  volfrac_H
exec/fungi/chk200000/Level_2/: X_k_D_00000  X_k_D_00001  X_k_D_00002  X_k_D_00003  X_k_D_00004  X_k_D_00005  X_k_D_00006  X_k_D_00007  X_k_D_00008  X_k_D_00009  X_k_D_00010  X_k_D_00011  X_k_D_00012  X_k_D_00013  X_k_D_00014  X_k_D_00015  X_k_H  volfrac_D_00002  volfrac_D_00003  volfrac_D_00004  volfrac_D_00006  volfrac_D_00008  volfrac_D_00009  volfrac_D_00012  volfrac_D_00014  volfrac_D_00015  volfrac_H
exec/fungi/chk200000/particles/: Header
exec/fungi/chk357000/: Header
exec/fungi/chk357000/Level_0/: X_k_D_00000  X_k_D_00001  X_k_D_00002  X_k_D_00003  X_k_D_00004  X_k_D_00005  X_k_D_00006  X_k_D_00007  X_k_D_00008  X_k_D_00009  X_k_D_00010  X_k_D_00011  X_k_D_00012  X_k_D_00013  X_k_D_00014  X_k_D_00015  X_k_H  volfrac_D_00002  volfrac_D_00003  volfrac_D_00006  volfrac_D_00007  volfrac_D_00010  volfrac_D_00011  volfrac_D_00014  (+2 more)
exec/fungi/chk357900/: Header  job_info
exec/fungi/chk40000/: Header  job_info
exec/nlev_dla_test/: CMakeLists.txt  input_ml2
exec/nlev_large_test/: CMakeLists.txt  input_ml2  input_real_nlev
exec/nlev_large_test/chk09700/: Header  job_info
exec/nlev_large_test/dbg/: input_ml2
exec/nlev_real_test/: CMakeLists.txt  input_real_nlev
exec/nlev_test/: input_nlev
exec/pair_nlev_test/: input_real_nlev
exec/pair_test/: input_pair  sep.pl
exec/rst_test/: input_real_nlev
exec/rst_test/chk16490/: Header  job_info
exec/rst_test/chk20000/: Header  job_info
exec/rst_test/chk22700/: Header  job_info
exec/vf_test/: input_real_nlev
exec/wall_test/: CMakeLists.txt  input_fungi  input_wall  zloc.pl
src/: CMakeLists.txt  Make.package  bmx.H  bmx.cpp  main.cpp
src/chemistry/: CMakeLists.txt  Make.package  bmx_cell_interaction.H  bmx_cell_interaction.cpp  bmx_cell_interaction_K.H  bmx_chem.H  bmx_chem.cpp  bmx_chem_K.H
src/deposition/: CMakeLists.txt  Make.package  bmx_deposition_K.H  bmx_deposition_bcs.cpp  bmx_pc_deposition.cpp
src/des/: CMakeLists.txt  Make.package  bmx_calc_txfr.cpp  bmx_calc_volume_fraction.cpp  bmx_des_K.H  bmx_pc.H  bmx_pc.cpp  bmx_pc_fusion.cpp  bmx_pc_init.cpp  bmx_pc_interaction.cpp  bmx_pc_write.cpp  bmx_pc_xchng.cpp  bmx_split_particles.cpp  bmx_split_particles.dbg
src/diffusion/: CMakeLists.txt  Make.package  bmx_define_coeffs_on_faces.cpp  bmx_diffuse_chem_species.cpp  bmx_diffuse_species.cpp  bmx_diffusion_op.H  bmx_diffusion_op.cpp
src/interpolation/: CMakeLists.txt  Make.package  bmx_interp_K.H
src/io/: CMakeLists.txt  Make.package  bmx_build_info.cpp  bmx_chk.cpp  bmx_io.cpp  bmx_plt.cpp  bmx_restart.cpp
src/leveldata/: CMakeLists.txt  Make.package  bmx_leveldata.H  bmx_leveldata.cpp
src/mods/: CMakeLists.txt  Make.package  bmx_bc_list.H  bmx_bc_parms.H  bmx_bc_parms.cpp  bmx_chem_species_parms.H  bmx_chem_species_parms.cpp  bmx_dem_parms.H  bmx_dem_parms.cpp  bmx_fluid_parms.H  bmx_fluid_parms.cpp  bmx_species_parms.H  bmx_species_parms.cpp
src/setup/: CMakeLists.txt  Make.package  bmx_arrays.cpp  bmx_calc_cell.H  bmx_calc_cell.cpp  bmx_calc_fluid_coeffs.H  bmx_calc_fluid_coeffs.cpp  bmx_init.cpp  bmx_init_fluid.H  bmx_init_fluid.cpp  bmx_set_bc_type.cpp  bmx_setup_solvers.cpp  bmx_tagging.cpp
src/timestepping/: CMakeLists.txt  Make.package  bmx_evolve.cpp  bmx_evolve_fluid.cpp
src/util/: CMakeLists.txt  Make.package  bmx_algorithm.H  bmx_filcc.H  bmx_filcc.cpp  bmx_fillpatch.cpp  bmx_fillpatch_bc.H  bmx_mf_helpers.H  bmx_mf_helpers.cpp  bmx_regrid.cpp  bmx_set_chem_species_bcs.cpp  bmx_set_species_bcs.cpp  bmx_util.cpp
(+609 files in other folders)
